# task-observer

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  package.json  pyproject.toml  requirements.txt
server/: app.py
server/config/: __init__.py  auth.py  database.py  environment.py  set_env.py
server/models/: __init__.py  task.py  user.py
server/models/migrations/: env.py
server/models/migrations/versions/: 12582bbdec76_.py  6ca0c7277c4e_.py  8209c812b159_initial_migration.py  86769ef53d97_.py  e870fcf00d35_.py  f12965293526_.py
server/routes/: __init__.py  task.py  user.py
server/schemas/: __init__.py  task.py  user.py
server/service/: __init__.py  auth.py
src/: App.vue  main.ts
src/boot/: axios.ts
src/components/: AuthForm.vue  NotifyComponent.vue  TaskCard.vue  TaskCreateForm.vue
src/composables/: index.ts  task.ts
src/interfaces/: task.ts  user.ts
src/pages/: AuthView.vue  HomeView.vue  IndexView.vue
src/router/: index.ts
src/store/: authStore.ts
